fix: overflow

--- a/src/components/decoration/activity-day-item/activity-day-item.module.scss
+++ b/src/components/decoration/activity-day-item/activity-day-item.module.scss
@@ -7,7 +7,7 @@
 
 .container {
   height: $minCalendarItemHeight;
-  overflow: hidden;
+  overflow: scroll;
   text-align: center;
   padding: 6px;
   border-bottom: 1px solid var(--bulma-dark);
